# feide-oidc-examples

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  FEIDE_KUNDEPORTAL_SETUP.md  LICENSE.md  README.md  basedpyrightconfig.json  pyproject.toml  run_feide_data_source_api.sh  run_feide_data_source_api.zsh  run_feide_login_full.sh  run_feide_login_full.zsh  run_feide_login_simple.sh  run_feide_login_simple.zsh
src/feide_data_source_api/: __init__.py  app.py  config.py
src/feide_login_core/: __init__.py  json_utils.py  jwt_validation.py  oidc.py  oidc_models.py  oidc_simple.py  pkce.py
src/feide_login_full/: __init__.py  app.py  config.py  login_flow.py  ui.py
src/feide_login_simple/: app.py
tests/: test_data_source_api.py  test_json_utils.py  test_jwt_validation.py  test_logout_full.py  test_oidc_client_requests.py  test_oidc_errors.py  test_oidc_models.py  test_pkce.py  test_simple_app.py
